--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Grussmann.cz</title>
 </head>
 <body>
-    <h1>Vítejte na Grussmann.cz</h1>
-    <p>Toto je placeholder stránka</p>
-    <p>Tato stránka zatím není hotová a bude v blízkém budoucnu upravována</p>
-    <footer>
+    <div class="header">
+        <h1>Grussmann.cz</h1>
+    </div>
+    <div class="mainbody">    
+        <h1>Vítejte na Grussmann.cz</h1>
+        <p>Toto je placeholder stránka.</p>
+        <p>Tato stránka zatím není hotová a bude v blízkém budoucnu upravována.</p></div>
+    <div class="footer">
         <p>&copy; 2024 Grussmann.cz</p>
-</body>
+    </div>
+    </body>
 </html>
